# code-samples

Asm/microblaze/: interrupt.S  lnkscript_rom.lds  malt_proc.h
Asm/x86/: 8501.COD  8501.MAC  ADLIB.COD  ADLIB.MAC  C2X.COD  CDS.COD  CONST.MAC  CONV.CDX  CPU_IO.COD  CSB.COD  DEBUGGER.CDX  FASM.MAC  HARDWARE.CDX  HARDWARE.MAC  IEC.CDX  IEC.MAC  INTR8.CDX  INTR9.CDX  JOY.COD  KBD.COD  MEMORY.COD  MENUS0.CDX  MENUS1.CDX  MENUS2.CDX  MENUS3.CDX  PLUS4.ASM  SB.COD  SOUND.COD  TED.COD  TIMER.COD  VIDEO.COD  X2C.CDX
Asm/x86-factorial/: fact-64i.asm  fact-64ii-128.asm  fact-64ii.asm  fact-64r.asm
Asm/x86-misc/: printstr.asm  strings.asm
Asm/x86-modes/: bootlong.asm  makebootdisk  pic.cga4  xpm2cga4.c
C++/c++-allocator/: pool2.cpp  pool2x.cpp
C++/gtest/: graph.cpp  graph.h  gtest.cpp  list.h  makefile
C++/ibm-dt-converter/: dt-format.txt  (+1 more)
C++/it/s1/: CMakeLists.txt  markets-loader.cpp  markets-loader.h  wss-client.cpp
ackindex/: ack-ext.c  ack.awk  ack.c  ack.d  ack.erl  ack.gam.bas  ack.hs  ack.java  ack.js  ack.js.html  ack.lsp  ack.lua  ack.mp  ack.p  ack.pas  ack.php.txt  ack.pl  ack.pro  ack.ps  ack.py  ack.rb  ack.sh  ack.tcl  ack.tex  ack.vb.bas  ack2-32.asm  ack2-64.asm
fibindex/: fib-ext.c  fib-timing.ods  fib.awk  fib.c  fib.d  fib.erl  fib.gam.bas  fib.hoc  fib.hs  fib.java  fib.js  fib.js.html  fib.lsp  fib.lua  fib.mp  fib.mse  fib.p  fib.pas  fib.php.txt  fib.pl  fib.pro  fib.ps  fib.py  fib.rb  fib.sed  fib.sh  fib.tcl  fib.tex  fib.vb.bas  fib1-32.asm  fib1-64.asm  fib2-32.asm  fib2-64.asm  fib2.c  fib3.c  fib3.tex
prolog/: msc5.pro  msc6en.pro
(+192 files in other folders)
